# HuaJ

./: .gitignore  CMakeLists.txt  README.md  huaj.sln
lib/: CM
lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/docs/: Doxyfile
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  title  windows
opengl-console/: camera.cpp  camera.h  drawManage.h  drawObject.h  drawmanage.cpp  drawobject.cpp  gl_window.cpp  gl_window.h  opengl-console.vcxproj  opengl-console.vcxproj.filters  opengl_console.cpp  quaternion.cpp  quaternion.h  singleton.h  stdafx.cpp  stdafx.h  vector3.cpp  vector3.h
opengl-console/Debug/: opengl-console.pch  vc141.idb
opengl-console/Debug/opengl-console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opengl-console.lastbuildstate
src/: CMakeLists.txt  drawmanage.cpp  drawobject.cpp  drawobject.h  gl_window.cpp  guid.h  matrix4.cpp  matrix4.h  opengl_console.cpp  singleton.cpp  singleton.h  vector3.cpp
